fix: Correct btn styles on mobile screens

--- a/style.css
+++ b/style.css
@@ -70,11 +70,36 @@ h2 {
   &:hover {
     background-color: var(--color-neutral-90);
     color: var(--color-text-00);
+    opacity: 1;
   }
 }
 
 .nowrap {
   white-space: nowrap;
+}
+
+@media (hover: none) {
+  .btn--primary:hover {
+    background-color: var(--color-neutral-90);
+    color: var(--color-text-00);
+  }
+
+  .btn--primary:active {
+    background-color: var(--color-primary-35);
+    color: var(--color-text-80);
+  }
+
+  .btn--secondary:hover {
+    background-color: var(--color-neutral-00);
+    color: var(--color-text-80);
+    opacity: 0.9;
+  }
+
+  .btn--secondary:active {
+    background-color: var(--color-neutral-90);
+    color: var(--color-text-00);
+    opacity: 1;
+  }
 }
 
 @media (min-width: 576px) {
@@ -120,6 +145,20 @@ h2 {
     border: solid var(--color-neutral-90) 0.125rem;
     background-color: inherit;
     color: var(--color-neutral-90);
+  }
+}
+
+@media (min-width: 1200px) and (hover: none) {
+  .btn--secondary:hover {
+    border: solid var(--color-neutral-90) 0.125rem;
+    background-color: inherit;
+    color: var(--color-neutral-90);
+  }
+
+  .btn--secondary:active {
+    background-color: var(--color-neutral-90);
+    color: var(--color-text-00);
+    opacity: 1;
   }
 }
 
